--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-chartjs-2": "2.11.1",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.12.0",
+    "react-loading": "^2.0.3",
     "react-loading-skeleton": "^2.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
